--- a/macos/app/selfHosted.entitlements
+++ b/macos/app/selfHosted.entitlements
@@ -3,12 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.application-identifier</key>
-	<string>$(DEVELOPMENT_TEAM).$(NETEXT_ID_MACOS)</string>
+	<string>$(DEVELOPMENT_TEAM).$(APP_ID_MACOS)</string>
 
 	<key>com.apple.developer.networking.networkextension</key>
 	<array>
-		<string>packet-tunnel-provider</string>
+		<string>packet-tunnel-provider-systemextension</string>
 	</array>
+
+	<key>com.apple.developer.system-extension.install</key>
+	<true/>
 
 	<key>keychain-access-groups</key>
 	<array>
@@ -17,6 +20,9 @@
 
 	<key>com.apple.developer.team-identifier</key>
 	<string>$(DEVELOPMENT_TEAM)</string>
+
+	<key>com.apple.developer.system-extension.install</key>
+	<true/>
 
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
