--- a/macos/app/selfHosted.entitlements
+++ b/macos/app/selfHosted.entitlements
@@ -7,7 +7,7 @@
 
 	<key>com.apple.developer.networking.networkextension</key>
 	<array>
-		<string>packet-tunnel-provider-systemextension</string>
+		<string>packet-tunnel-provider</string>
 	</array>
 
 	<key>com.apple.developer.system-extension.install</key>
@@ -37,5 +37,8 @@
 
 	<key>com.apple.security.network.server</key>
 	<true/>
+
+        <key>com.apple.security.files.user-selected.read-write</key>
+        <true/>
 </dict>
 </plist>
